tests/constructor_annots/constructor_annots.exp
Error: constructors.js:3
  3:   this.x = 0; // constructs objects with property x
                ^ number. This type is incompatible with
  3:   this.x = 0; // constructs objects with property x
       ^^^^^^ boolean

Error: constructors.js:22
 22: exports.Foo2 = (Foo: Class<IFoo>);
                                ^^^^ statics of IFoo. This type is incompatible with
 22: exports.Foo2 = (Foo: Class<IFoo>);
                     ^^^ function
  Property `y` is incompatible:
      5: Foo.y = 0; // has static property y
                 ^ number. This type is incompatible with
     19:   static y: boolean; // error, should have declared static y: number instead
                     ^^^^^^^ boolean

Error: test.js:2
  2: var x: string = new Foo().x; // error, found number instead of string
                               ^ property `x`. Property not found in
  2: var x: string = new Foo().x; // error, found number instead of string
                     ^^^^^^^^^ new object

Error: test.js:3
  3: var y: string = Foo.y; // error, found number instead of string
                     ^^^^^ boolean. This type is incompatible with
  3: var y: string = Foo.y; // error, found number instead of string
            ^^^^^^ string

Error: test.js:4
  4: var z: string = new Foo().m();
                     ^^^^^^^^^^^^^ number. This type is incompatible with
  4: var z: string = new Foo().m();
            ^^^^^^ string

Error: test.js:7
  7: var x2: string = new Foo2().x; // error, found boolean instead of string
                      ^^^^^^^^^^^^ boolean. This type is incompatible with
  7: var x2: string = new Foo2().x; // error, found boolean instead of string
             ^^^^^^ string

Error: test.js:8
  8: var y2: string = Foo2.y; // error, found boolean instead of string
                      ^^^^^^ boolean. This type is incompatible with
  8: var y2: string = Foo2.y; // error, found boolean instead of string
             ^^^^^^ string

Error: test.js:9
  9: var z2: string = new Foo2().m();
                      ^^^^^^^^^^^^^^ number. This type is incompatible with
  9: var z2: string = new Foo2().m();
             ^^^^^^ string


Found 8 errors
